<resources>
    <string name="app_name">Map Progect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_forever_message">You need to acces permission to show your location</string>
    <string name="open">open</string>
    <string name="permissions_denied_forever">permission denied forever</string>
    <string name="location_permission_granted">permission granted</string>
    <string name="button">button</string>
    <string name="name_city">Name City</string>
    <string name="city_name">City name</string>
    <string name="temperature">Temperature</string>
    <string name="ufo">UFO</string>
    <string name="wind_force">Wind force</string>
    <string name="avghumidity">avghumidity:</string>
</resources>